# interop_llm_tools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
containers/ollama/: compose.yaml  fix_cdi.sh  run_compose.sh  start_ollama_api.sh
containers/phoenix/: compose.yaml
examples/: async_query_pipeline_with_multi_chunking.py  document_agent.py  evaluate_results.py  litellm_proxy_openai_api_quickstart.py  litellm_quickstart.py  llama_index_quickstart.py  rag_query_pipeline_with_complex_query.py
interop_llm_tools/: api.py  config.py
interop_llm_tools/core/: config.py  llm.py  llm_config.py  llm_context.py  prompts.py
interop_llm_tools/core/agent_workers/: simple.py
interop_llm_tools/core/api/: __init__.py  agent_api.py  factory_api.py  ingestion_api.py  jira_api.py  llm_api.py  pipeline_api.py
interop_llm_tools/core/base/: __init__.py  api.py  base_agent_worker.py  base_api.py  base_api_config.py  base_language_model_config.py  base_prompt_template.py  base_wrapper.py  config.py  wrapper.py
interop_llm_tools/core/common/: __init__.py  llm_api_type.py  llm_client_type.py
interop_llm_tools/mixins/: from_config.py  from_env.py
tests/: conftest.py  test_api.py  test_config.py  test_llm.py  test_llm_context.py
tests/functional_tests/: test_agent_api.py  test_api_live.py  test_factory_api.py  test_llm_api.py
tests/unit_tests/: test_api.py  test_config_loader.py  test_factory.py  test_ingestion_api.py  test_ingestion_api_config.py  test_jira_api.py  test_jira_reader.py  test_llm_client_config.py  test_pipeline_api.py
(+42 files in other folders)
