[tool.poetry]
name = "interop-llm-tools"
version = "0.1.0"
description = ""
authors = ["Michael Pruitt <mpruitt@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.12,<3.13"
python-dotenv = "^1.0.1"
llama-index = "^0.10.43"
llama-index-embeddings-ollama = "^0.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
openinference-instrumentation-llama-index = ">=1.0.0"
#arize-phoenix = {extras = ["evals"], version = "^3.24.0"}
#llama-index-callbacks-arize-phoenix = ">=0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
